--- a/hugo.toml
+++ b/hugo.toml
@@ -30,11 +30,16 @@ enableEmoji = true
     url = "/tags/"
   [[menu.main]]
     weight = 3
+    identifier = "projects"
+    name = "Projects"
+    url = "/projects/"
+  [[menu.main]]
+    weight = 4
     identifier = "achievements"
     name = "Achievements"
     url = "/achievements/"
   [[menu.main]]
-    weight = 4
+    weight = 5
     identifier = "about"
     name = "About"
     url = "/about/"
